--- a/package.json
+++ b/package.json
@@ -3,15 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "date-fns": "^2.4.1",
+    "dotenv": "^8.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "event-emitter": "^0.3.5",
+    "events": "^3.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.4",
     "react": "^16.10.2",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.10.2",
+    "styled-components": "^4.4.0",
+    "yarn": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "jest": "^24.9.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
